--- a/src/style/variables.less
+++ b/src/style/variables.less
@@ -3,6 +3,6 @@
 // 先引入antd的
 @import 'node_modules/ant-design-vue/lib/style/themes/default';
 
-// 覆盖
+// 覆盖变量
 @primary-color: #00b9b2;
 @layout-header-background: @primary-10;
